test/sematest/invalid/array_length.java
class A {
  public static void main(String[] args) {
    new int[0].length;
  }
}